add_library(core STATIC
    arm/arm_interface.h
    arm/unicorn/arm_unicorn.cpp
    arm/unicorn/arm_unicorn.h
    core.cpp
    core.h
    core_timing.cpp
    core_timing.h
    file_sys/directory.h
    file_sys/disk_filesystem.cpp
    file_sys/disk_filesystem.h
    file_sys/errors.h
    file_sys/filesystem.cpp
    file_sys/filesystem.h
    file_sys/path_parser.cpp
    file_sys/path_parser.h
    file_sys/program_metadata.cpp
    file_sys/program_metadata.h
    file_sys/romfs_factory.cpp
    file_sys/romfs_factory.h
    file_sys/romfs_filesystem.cpp
    file_sys/romfs_filesystem.h
    file_sys/savedata_factory.cpp
    file_sys/savedata_factory.h
    file_sys/sdmc_factory.cpp
    file_sys/sdmc_factory.h
    file_sys/storage.h
    frontend/emu_window.cpp
    frontend/emu_window.h
    frontend/framebuffer_layout.cpp
    frontend/framebuffer_layout.h
    frontend/input.h
    gdbstub/gdbstub.cpp
    gdbstub/gdbstub.h
    hle/config_mem.cpp
    hle/config_mem.h
    hle/ipc.h
    hle/ipc_helpers.h
    hle/kernel/client_port.cpp
    hle/kernel/client_port.h
    hle/kernel/client_session.cpp
    hle/kernel/client_session.h
    hle/kernel/condition_variable.cpp
    hle/kernel/condition_variable.h
    hle/kernel/errors.h
    hle/kernel/event.cpp
    hle/kernel/event.h
    hle/kernel/handle_table.cpp
    hle/kernel/handle_table.h
    hle/kernel/hle_ipc.cpp
    hle/kernel/hle_ipc.h
    hle/kernel/kernel.cpp
    hle/kernel/kernel.h
    hle/kernel/memory.cpp
    hle/kernel/memory.h
    hle/kernel/mutex.cpp
    hle/kernel/mutex.h
    hle/kernel/object_address_table.cpp
    hle/kernel/object_address_table.h
    hle/kernel/process.cpp
    hle/kernel/process.h
    hle/kernel/resource_limit.cpp
    hle/kernel/resource_limit.h
    hle/kernel/scheduler.cpp
    hle/kernel/scheduler.h
    hle/kernel/server_port.cpp
    hle/kernel/server_port.h
    hle/kernel/server_session.cpp
    hle/kernel/server_session.h
    hle/kernel/session.h
    hle/kernel/shared_memory.cpp
    hle/kernel/shared_memory.h
    hle/kernel/svc.cpp
    hle/kernel/svc.h
    hle/kernel/svc_wrap.h
    hle/kernel/thread.cpp
    hle/kernel/thread.h
    hle/kernel/timer.cpp
    hle/kernel/timer.h
    hle/kernel/vm_manager.cpp
    hle/kernel/vm_manager.h
    hle/kernel/wait_object.cpp
    hle/kernel/wait_object.h
    hle/lock.cpp
    hle/lock.h
    hle/result.h
    hle/romfs.cpp
    hle/romfs.h
    hle/service/acc/acc.cpp
    hle/service/acc/acc.h
    hle/service/acc/acc_u0.cpp
    hle/service/acc/acc_u0.h
    hle/service/am/am.cpp
    hle/service/am/am.h
    hle/service/am/applet_ae.cpp
    hle/service/am/applet_ae.h
    hle/service/am/applet_oe.cpp
    hle/service/am/applet_oe.h
    hle/service/aoc/aoc_u.cpp
    hle/service/aoc/aoc_u.h
    hle/service/apm/apm.cpp
    hle/service/apm/apm.h
    hle/service/apm/interface.cpp
    hle/service/apm/interface.h
    hle/service/audio/audio.cpp
    hle/service/audio/audio.h
    hle/service/audio/audin_u.cpp
    hle/service/audio/audin_u.h
    hle/service/audio/audout_u.cpp
    hle/service/audio/audout_u.h
    hle/service/audio/audrec_u.cpp
    hle/service/audio/audrec_u.h
    hle/service/audio/audren_u.cpp
    hle/service/audio/audren_u.h
    hle/service/audio/audren_u.cpp
    hle/service/audio/audren_u.h
    hle/service/audio/codecctl.cpp
    hle/service/audio/codecctl.h
    hle/service/fatal/fatal.cpp
    hle/service/fatal/fatal.h
    hle/service/fatal/fatal_p.cpp
    hle/service/fatal/fatal_p.h
    hle/service/fatal/fatal_u.cpp
    hle/service/fatal/fatal_u.h
    hle/service/filesystem/filesystem.cpp
    hle/service/filesystem/filesystem.h
    hle/service/filesystem/fsp_srv.cpp
    hle/service/filesystem/fsp_srv.h
    hle/service/friend/friend.cpp
    hle/service/friend/friend.h
    hle/service/friend/friend_a.cpp
    hle/service/friend/friend_a.h
    hle/service/hid/hid.cpp
    hle/service/hid/hid.h
    hle/service/lm/lm.cpp
    hle/service/lm/lm.h
    hle/service/nifm/nifm.cpp
    hle/service/nifm/nifm.h
    hle/service/nifm/nifm_a.cpp
    hle/service/nifm/nifm_a.h
    hle/service/nifm/nifm_s.cpp
    hle/service/nifm/nifm_s.h
    hle/service/nifm/nifm_u.cpp
    hle/service/nifm/nifm_u.h
    hle/service/ns/ns.cpp
    hle/service/ns/ns.h
    hle/service/ns/pl_u.cpp
    hle/service/ns/pl_u.h
    hle/service/nvdrv/devices/nvdevice.h
    hle/service/nvdrv/devices/nvdisp_disp0.cpp
    hle/service/nvdrv/devices/nvdisp_disp0.h
    hle/service/nvdrv/devices/nvhost_as_gpu.cpp
    hle/service/nvdrv/devices/nvhost_as_gpu.h
    hle/service/nvdrv/devices/nvhost_ctrl.cpp
    hle/service/nvdrv/devices/nvhost_ctrl.h
    hle/service/nvdrv/devices/nvhost_ctrl_gpu.cpp
    hle/service/nvdrv/devices/nvhost_ctrl_gpu.h
    hle/service/nvdrv/devices/nvhost_gpu.cpp
    hle/service/nvdrv/devices/nvhost_gpu.h
    hle/service/nvdrv/devices/nvmap.cpp
    hle/service/nvdrv/devices/nvmap.h
    hle/service/nvdrv/interface.cpp
    hle/service/nvdrv/interface.h
    hle/service/nvdrv/nvdrv.cpp
    hle/service/nvdrv/nvdrv.h
    hle/service/nvdrv/nvmemp.cpp
    hle/service/nvdrv/nvmemp.h
    hle/service/nvflinger/buffer_queue.cpp
    hle/service/nvflinger/buffer_queue.h
    hle/service/nvflinger/nvflinger.cpp
    hle/service/nvflinger/nvflinger.h
    hle/service/pctl/pctl.cpp
    hle/service/pctl/pctl.h
    hle/service/pctl/pctl_a.cpp
    hle/service/pctl/pctl_a.h
    hle/service/service.cpp
    hle/service/service.h
    hle/service/set/set.cpp
    hle/service/set/set.h
    hle/service/set/set_cal.cpp
    hle/service/set/set_cal.h
    hle/service/set/set_fd.cpp
    hle/service/set/set_fd.h
    hle/service/set/set_sys.cpp
    hle/service/set/set_sys.h
    hle/service/set/settings.cpp
    hle/service/set/settings.h
    hle/service/sm/controller.cpp
    hle/service/sm/controller.h
    hle/service/sm/sm.cpp
    hle/service/sm/sm.h
    hle/service/sockets/bsd_u.cpp
    hle/service/sockets/bsd_u.h
    hle/service/sockets/sfdnsres.cpp
    hle/service/sockets/sfdnsres.h
    hle/service/sockets/sockets.cpp
    hle/service/sockets/sockets.h
    hle/service/spl/csrng.cpp
    hle/service/spl/csrng.h
    hle/service/spl/module.cpp
    hle/service/spl/module.h
    hle/service/spl/spl.cpp
    hle/service/spl/spl.h
    hle/service/ssl/ssl.cpp
    hle/service/ssl/ssl.h
    hle/service/time/time.cpp
    hle/service/time/time.h
    hle/service/time/time_s.cpp
    hle/service/time/time_s.h
    hle/service/time/time_u.cpp
    hle/service/time/time_u.h
    hle/service/vi/vi.cpp
    hle/service/vi/vi.h
    hle/service/vi/vi_m.cpp
    hle/service/vi/vi_m.h
    hle/service/vi/vi_s.cpp
    hle/service/vi/vi_s.h
    hle/service/vi/vi_u.cpp
    hle/service/vi/vi_u.h
    hle/shared_page.cpp
    hle/shared_page.h
    hw/hw.cpp
    hw/hw.h
    hw/lcd.cpp
    hw/lcd.h
    loader/deconstructed_rom_directory.cpp
    loader/deconstructed_rom_directory.h
    loader/elf.cpp
    loader/elf.h
    loader/linker.cpp
    loader/linker.h
    loader/loader.cpp
    loader/loader.h
    loader/nro.cpp
    loader/nro.h
    loader/nso.cpp
    loader/nso.h
    memory.cpp
    memory.h
    memory_hook.h
    memory_setup.h
    perf_stats.cpp
    perf_stats.h
    settings.cpp
    settings.h
    telemetry_session.cpp
    telemetry_session.h
    tracer/citrace.h
    tracer/recorder.cpp
    tracer/recorder.h
)

create_target_directory_groups(core)

target_link_libraries(core PUBLIC common PRIVATE video_core)
target_link_libraries(core PUBLIC Boost::boost PRIVATE fmt lz4_static unicorn)

if (ARCHITECTURE_x86_64)
    target_sources(core PRIVATE
        arm/dynarmic/arm_dynarmic.cpp
        arm/dynarmic/arm_dynarmic.h
    )
    target_link_libraries(core PRIVATE dynarmic)
endif()
